[project]
name = "network-security"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.6.17",
    "dagshub>=0.7.0",
    "dnspython>=2.8.0",
    "fastapi>=0.138.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "mlflow>=3.14.0",
    "notebook>=7.6.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyaml>=26.2.1",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
